refactor: create correlation handler, refactor tests